--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
-      <h1>Bienvenue sur mon portfolio !</h1>
+      <ul>
+        <li><img src="/image/IMG_9065.webp" alt="My image" /></li>
+        <li><p>MOSTAFA TITAH</p></li>
+      </ul>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">PROJECTS</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
     </header>
+    <main>
+      <h1>HEY? I'AM MOSTAFA TITAH</h1>
+      <p>
+        A Fronted focused Web Developer building the Frontend of Websites and
+        Web Applications that leads to the success of the overall product
+      </p>
+    </main>
+    <footer></footer>
   </body>
 </html>
