structure html and css

--- a/index.html
+++ b/index.html
@@ -8,24 +8,38 @@
   </head>
   <body>
     <header>
-      <ul>
-        <li><img src="/image/IMG_9065.webp" alt="My image" /></li>
-        <li><p>MOSTAFA TITAH</p></li>
-      </ul>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">PROJECTS</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
+      <section id="nav-bar">
+        <ul class="name-image">
+         
+          <li><img src="/image/IMG_9065m.webp" alt="My image" /></li>
+          <div><li><p>MOSTAFA TITAH</p></li></div>
+          
+        </ul>
+        <ul class="links">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">PROJECTS</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </section>
     </header>
     <main>
+      <section id="about-me">
       <h1>HEY? I'AM MOSTAFA TITAH</h1>
       <p>
         A Fronted focused Web Developer building the Frontend of Websites and
         Web Applications that leads to the success of the overall product
       </p>
     </main>
+  </section>
+  <section id="sociale-media">
+    <ul>
+      <li><a href=""><img src="/image/icons8-github.svg" alt="logo github"></a></li>
+      <li><a href=""><img src="/image/icons8-linkedin.webp" alt="logo linkedin"></a></li>
+      <li><a href=""><img src="/image/icons8-facebook.svg" alt="logo facebook"></a></li>
+      <li><a href=""></a></li>
+    </ul>
+  </section>
     <footer></footer>
   </body>
 </html>
