--- a/index.html
+++ b/index.html
@@ -72,6 +72,42 @@
           </li>
         </ul>
       </section>
+      <section id="about-me">
+        <h1>ABOUT ME</h1>
+        <p>
+          Here you will find more information about me, what i do, and my
+          current skills mostly in terms of programming and technology
+        </p>
+      </section>
+      <section>
+        <h2>Get to Know me!</h2>
+        <p>
+          i'm a fullstuck Web Developer building the Front and Back-end of
+          Websites and Web Applications that leads to the success of the overall
+          product. Check out some of my work in the projects section.
+        </p>
+        <p>
+          I also like sharing content related to the stuff that i have learned
+          over the years in Web Development so it can help other people of the
+          Dev community. Feel free to connect or Follow me on my
+          <a href="#">Linkedin</a> where i post useful content related to Web
+          Development and Programming
+        </p>
+        <p>
+          I'm open to Job opportunities where i can contribute, learn and grow.
+          if you have a good opportunity that matches my skills and experience
+          then don't hesitate to contact me.
+        </p>
+        <input type="button" value="CONTACT" />
+        <h2>My Skills</h2>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>SASS</li>
+          <li>Github</li>
+        </ul>
+      </section>
     </main>
     <footer>
       <h2></h2>
