--- a/index.html
+++ b/index.html
@@ -79,38 +79,75 @@
           current skills mostly in terms of programming and technology
         </p>
       </section>
+      <section id="know-me">
+        <div class="text-know-me">
+          <h2>Get to Know me!</h2>
+          <p>
+            i'm a fullstuck Web Developer building the Front and Back-end of
+            Websites and Web Applications that leads to the success of the
+            overall product. Check out some of my work in the projects section.
+          </p>
+          <p>
+            I also like sharing content related to the stuff that i have learned
+            over the years in Web Development so it can help other people of the
+            Dev community. Feel free to connect or Follow me on my
+            <a href="#">Linkedin</a> where i post useful content related to Web
+            Development and Programming
+          </p>
+          <p>
+            I'm open to Job opportunities where i can contribute, learn and
+            grow. if you have a good opportunity that matches my skills and
+            experience then don't hesitate to contact me.
+          </p>
+          <input type="button" value="CONTACT" />
+        </div>
+
+        <dev class="skills">
+          <h2>My Skills</h2>
+          <ul>
+            <li>HTML</li>
+          </ul>
+          <ul>
+            <li>CSS</li>
+          </ul>
+          <ul>
+            <li>JavaScript</li>
+          </ul>
+          <ul>
+            <li>SASS</li>
+          </ul>
+          <ul>
+            <li>Github</li>
+          </ul>
+        </dev>
+      </section>
       <section>
-        <h2>Get to Know me!</h2>
+        <h1>PROJECTS</h1>
         <p>
-          i'm a fullstuck Web Developer building the Front and Back-end of
-          Websites and Web Applications that leads to the success of the overall
-          product. Check out some of my work in the projects section.
+          Here you will find some of the personal and clients projects that i
+          created with each project containing its own case study
         </p>
-        <p>
-          I also like sharing content related to the stuff that i have learned
-          over the years in Web Development so it can help other people of the
-          Dev community. Feel free to connect or Follow me on my
-          <a href="#">Linkedin</a> where i post useful content related to Web
-          Development and Programming
-        </p>
-        <p>
-          I'm open to Job opportunities where i can contribute, learn and grow.
-          if you have a good opportunity that matches my skills and experience
-          then don't hesitate to contact me.
-        </p>
-        <input type="button" value="CONTACT" />
-        <h2>My Skills</h2>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>SASS</li>
-          <li>Github</li>
-        </ul>
       </section>
     </main>
     <footer>
-      <h2></h2>
+      <form
+        class="footer"
+        action="https://formspree.io/f/xleqbevp"
+        method="POST"
+      >
+        <h2>CONTACT</h2>
+        <label> Your email:</label>
+        <input
+          type="email"
+          name="email"
+          placeholder="exemple@gmail.com"
+          required
+        />
+
+        <label> Your message: <textarea name="message"></textarea></label>
+        <!-- your other form fields go here -->
+        <button type="submit">Submit</button>
+      </form>
     </footer>
   </body>
 </html>
