--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -91,8 +91,9 @@
             I also like sharing content related to the stuff that i have learned
             over the years in Web Development so it can help other people of the
             Dev community. Feel free to connect or Follow me on my
-            <a href="#">Linkedin</a> where i post useful content related to Web
-            Development and Programming
+            <a href="https://www.linkedin.com/in/titahelmostafa">Linkedin</a>
+            where i post useful content related to Web Development and
+            Programming
           </p>
           <p>
             I'm open to Job opportunities where i can contribute, learn and
@@ -110,6 +111,7 @@
           <ul>
             <li>CSS</li>
           </ul>
+          <br />
           <ul>
             <li>JavaScript</li>
           </ul>
