--- a/Aboutme.html
+++ b/Aboutme.html
@@ -4,62 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About me</title>
-    <link rel="stylesheet" href="/Porfolio/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section id="about-me">
-      <h1>ABOUT ME</h1>
-      <p>
-        Here you will find more information about me, what i do, and my current
-        skills mostly in terms of programming and technology
-      </p>
+    <main>
+      <section id="about-me">
+        <h1>ABOUT ME</h1>
+        <p>
+          Here you will find more information about me, what i do, and my
+          current skills mostly in terms of programming and technology
+        </p>
 
-      <section id="know-me">
-        <div class="text-know-me">
-          <h2>Get to Know me!</h2>
-          <p>
-            I'm a fullstuck Web Developer building the Front and Back-end of
-            Websites and Web Applications that leads to the success of the
-            overall product. Check out some of my work in the projects section.
-          </p>
-          <p>
-            I also like sharing content related to the stuff that i have learned
-            over the years in Web Development so it can help other people of the
-            Dev community. Feel free to connect or Follow me on my
-            <a href="https://www.linkedin.com/in/titahelmostafa">Linkedin</a>
-            where i post useful content related to Web Development and
-            Programming
-          </p>
-          <p>
-            I'm open to Job opportunities where i can contribute, learn and
-            grow. if you have a good opportunity that matches my skills and
-            experience then don't hesitate to contact me.
-          </p>
-          <input type="button" value="CONTACT" />
-        </div>
-        <h2>My Skills</h2>
-        <dev class="skills">
-          <ul>
-            <li>HTML</li>
-          </ul>
-          <ul>
-            <li>CSS</li>
-          </ul>
+        <section id="know-me">
+          <div class="text-know-me">
+            <h2>Get to Know me!</h2>
+            <p>
+              I'm a fullstuck Web Developer building the Front and Back-end of
+              Websites and Web Applications that leads to the success of the
+              overall product. Check out some of my work in the projects
+              section.
+            </p>
+            <p>
+              I also like sharing content related to the stuff that i have
+              learned over the years in Web Development so it can help other
+              people of the Dev community. Feel free to connect or Follow me on
+              my
+              <a href="https://www.linkedin.com/in/titahelmostafa">Linkedin</a>
+              where i post useful content related to Web Development and
+              Programming
+            </p>
+            <p>
+              I'm open to Job opportunities where i can contribute, learn and
+              grow. if you have a good opportunity that matches my skills and
+              experience then don't hesitate to contact me.
+            </p>
+            <button class="button" type="link">Contact</button>
+          </div>
+          <h2>My Skills</h2>
+          <dev class="skills">
+            <ul>
+              <li>HTML</li>
+            </ul>
+            <ul>
+              <li>CSS</li>
+            </ul>
 
-          <ul>
-            <li>JavaScript</li>
-          </ul>
-          <ul>
-            <li>SASS</li>
-          </ul>
-          <ul>
-            <li>Github</li>
-          </ul>
-          <ul>
-            <li>Bootstrap</li>
-          </ul>
-        </dev>
+            <ul>
+              <li>JavaScript</li>
+            </ul>
+            <ul>
+              <li>SASS</li>
+            </ul>
+            <ul>
+              <li>Github</li>
+            </ul>
+            <ul>
+              <li>Bootstrap</li>
+            </ul>
+          </dev>
+        </section>
       </section>
-    </section>
+    </main>
   </body>
 </html>
