--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio TITAH MOSTAFA</title>
-    <link rel="stylesheet" href="/Porfolio/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <section id="nav-bar">
         <ul class="name-image">
           <li>
-            <img
-              src="/Porfolio/image/IMG_9065m-1.webp"
-              alt="My image mostafa titah"
-            />
+            <img src="./image/IMG_9065m-1.webp" alt="My image mostafa titah" />
           </li>
           <div>
             <li><p>MOSTAFA TITAH</p></li>
           </div>
         </ul>
         <ul class="links">
-          <li><a href="#">HOME</a></li>
-          <li><a href="">ABOUT</a></li>
-          <li><a href="#">PROJECTS</a></li>
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="./Aboutme.html">ABOUT</a></li>
+          <li><a href="./Projects.html">PROJECTS</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
       </section>
@@ -72,78 +69,15 @@
               >
                 <path
                   d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z"
-                ></path></svg
-            ></a>
+                ></path>
+              </svg>
+            </a>
           </li>
         </ul>
       </section>
-      <section id="about-me">
-        <h1>ABOUT ME</h1>
-        <p>
-          Here you will find more information about me, what i do, and my
-          current skills mostly in terms of programming and technology
-        </p>
-      </section>
-      <section id="know-me">
-        <div class="text-know-me">
-          <h2>Get to Know me!</h2>
-          <p>
-            I'm a fullstuck Web Developer building the Front and Back-end of
-            Websites and Web Applications that leads to the success of the
-            overall product. Check out some of my work in the projects section.
-          </p>
-          <p>
-            I also like sharing content related to the stuff that i have learned
-            over the years in Web Development so it can help other people of the
-            Dev community. Feel free to connect or Follow me on my
-            <a href="https://www.linkedin.com/in/titahelmostafa">Linkedin</a>
-            where i post useful content related to Web Development and
-            Programming
-          </p>
-          <p>
-            I'm open to Job opportunities where i can contribute, learn and
-            grow. if you have a good opportunity that matches my skills and
-            experience then don't hesitate to contact me.
-          </p>
-          <input type="button" value="CONTACT" />
-        </div>
-        <h2>My Skills</h2>
-        <dev class="skills">
-          <ul>
-            <li>HTML</li>
-          </ul>
-          <ul>
-            <li>CSS</li>
-          </ul>
-
-          <ul>
-            <li>JavaScript</li>
-          </ul>
-          <ul>
-            <li>SASS</li>
-          </ul>
-          <ul>
-            <li>Github</li>
-          </ul>
-          <ul>
-            <li>Bootstrap</li>
-          </ul>
-        </dev>
-      </section>
-      <section>
-        <h1>PROJECTS</h1>
-        <p>
-          Here you will find some of the personal and clients projects that i
-          created with each project containing its own case study
-        </p>
-      </section>
     </main>
-    <footer>
-      <form
-        class="footer"
-        action="https://formspree.io/f/xleqbevp"
-        method="POST"
-      >
+    <footer class="footer">
+      <form action="https://formspree.io/f/xleqbevp" method="POST">
         <h2>CONTACT</h2>
         <label for="inputNom" id="labellastname">Last name</label>
         <input
@@ -172,7 +106,7 @@
 
         <label> Your message: <textarea name="message"></textarea></label>
         <!-- your other form fields go here -->
-        <button type="submit">Submit</button>
+        <button class="button" type="submit">Submit</button>
       </form>
     </footer>
   </body>
