--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Contact</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -29,34 +29,44 @@
         <p>C'est une page de démonstration.</p>
       </div>
     </header>
-    <main>
-      <section>
-        <h1>PROJECTS</h1>
-        <p>
-          Here you will find some of the personal and clients projects that i
-          created with each project containing its own case study
-        </p>
-        <article>
-          <ul class="my-project">
-            <li>
-              <img src="" alt="" />
-              <h3>Boulangerie</h3>
-              <p></p>
-            </li>
-            <li>
-              <img src="" alt="" />
-              <h3>Family pictures</h3>
-              <p></p>
-            </li>
-            <li>
-              <img src="" alt="" />
-              <h3></h3>
-              <p></p>
-            </li>
-          </ul>
-        </article>
-      </section>
-    </main>
+    <section>
+      <form class="https://formspree.io/f/xleqbevp" method="POST">
+        <div class="form">
+          <h2>CONTACT</h2>
+          <label for="inputNom" id="labellastname">Last name</label>
+          <input
+            type="nom"
+            name="nom"
+            id="inputNom"
+            placeholder="Saisissez votre nom de famille"
+            required
+          />
+
+          <label for="inputPrenom" id="labelfirestname">Firest name</label>
+          <input
+            type="prenom"
+            name="prenom"
+            id="inputPrenom"
+            placeholder="Saisissez votre prénom"
+            required
+          />
+          <label> Your email:</label>
+          <input
+            type="email"
+            name="email"
+            placeholder="exemple@gmail.com"
+            required
+          />
+
+          <label>
+            Your message: <br /><textarea name="message"></textarea>
+          </label>
+          <!-- your other form fields go here -->
+          <button class="button" type="submit">Submit</button>
+        </div>
+      </form>
+    </section>
+    <footer></footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         var burgerMenu = document.querySelector(".burger-menu");
