--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <ul class="nav-list" id="navList">
           <li><a href="#">Home</a></li>
-          <li><a href="./aboutme.html">About me</a></li>
-          <li><a href="./Projects.html">Projects</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="aboutme.html">About me</a></li>
+          <li><a href="Projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
 
