--- a/Aboutme.html
+++ b/Aboutme.html
@@ -15,10 +15,10 @@
         <div class="bar"></div>
       </div>
       <ul class="nav-list" id="navList">
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./aboutme.html">About me</a></li>
-        <li><a href="./Projects.html">Projects</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutme.html">About me</a></li>
+        <li><a href="Projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
