--- a/Aboutme.html
+++ b/Aboutme.html
@@ -21,12 +21,6 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-
-    <div class="content">
-      <!-- Le contenu de votre page va ici -->
-      <h1>Bienvenue sur notre site</h1>
-      <p>C'est une page de démonstration.</p>
-    </div>
   </header>
   <body>
     <main>
@@ -43,50 +37,65 @@
             <p>
               I'm a fullstuck Web Developer building the Front and Back-end of
               Websites and Web Applications that leads to the success of the
-              overall product. Check out some of my work in the projects
-              section.
-            </p>
-            <p>
-              I also like sharing content related to the stuff that i have
-              learned over the years in Web Development so it can help other
-              people of the Dev community. Feel free to connect or Follow me on
-              my
+              overall product. <br />
+              Check out some of my work in the projects section. I also like
+              sharing content related to the stuff that i have learned over the
+              years in Web Development so it can help other people of the Dev
+              community. <br />
+              Feel free to connect or Follow me on my
               <a href="https://www.linkedin.com/in/titahelmostafa">Linkedin</a>
               where i post useful content related to Web Development and
-              Programming
+              Programming I'm open to Job opportunities where i can contribute,
+              learn and grow. <br />
+              if you have a good opportunity that matches my skills and
+              experience then don't hesitate to contact me. <br /><button
+                class="button"
+                type="link"
+              >
+                Contact
+              </button>
             </p>
-            <p>
-              I'm open to Job opportunities where i can contribute, learn and
-              grow. if you have a good opportunity that matches my skills and
-              experience then don't hesitate to contact me.
-            </p>
-            <button class="button" type="link">Contact</button>
           </div>
-          <h2>My Skills</h2>
-          <dev class="skills">
-            <ul>
-              <li>HTML</li>
-            </ul>
-            <ul>
-              <li>CSS</li>
-            </ul>
+          <div class="my-skill">
+            <h2>My Skills</h2>
+            <dev class="skills">
+              <ul>
+                <li>HTML</li>
+              </ul>
+              <ul>
+                <li>CSS</li>
+              </ul>
 
-            <ul>
-              <li>JavaScript</li>
-            </ul>
-            <ul>
-              <li>SASS</li>
-            </ul>
-            <ul>
-              <li>Github</li>
-            </ul>
-            <ul>
-              <li>Bootstrap</li>
-            </ul>
-          </dev>
+              <ul>
+                <li>JavaScript</li>
+              </ul>
+              <ul>
+                <li>SASS</li>
+              </ul>
+              <ul>
+                <li>Github</li>
+              </ul>
+              <ul>
+                <li>Bootstrap</li>
+              </ul>
+            </dev>
+          </div>
         </section>
       </section>
     </main>
+    <footer>
+      <div>
+        <h3>Contact Information</h3>
+        <p>Name : MOSTAFA TITAH</p>
+        <p>Professional Title: TITAH MOSTAFA</p>
+        <p>Adresse : 9 Rue des jardins <br />69600 OULLINS <br />FRANCE</p>
+        <p>Phone : +33 676039463</p>
+        <p>Email : titah.mostafa.pro@gmail.com</p>
+      </div>
+      <div class="copyright">
+        <p>©Copyright 2024.Made by MOSTAFA TITAH</p>
+      </div>
+    </footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         var burgerMenu = document.querySelector(".burger-menu");
