--- a/index.html
+++ b/index.html
@@ -22,16 +22,10 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
-
-      <div class="content">
-        <!-- Le contenu de votre page va ici -->
-        <h1>Bienvenue sur notre site</h1>
-        <p>C'est une page de démonstration.</p>
-      </div>
     </header>
     <main>
       <section id="about-me">
-        <h1>HEY? I'M MOSTAFA TITAH</h1>
+        <h1>HEY! I'M MOSTAFA TITAH</h1>
         <p>
           A Fronted focused Web Developer building the Frontend of Websites and
           Web Applications that leads to the success of the overall product
@@ -39,12 +33,6 @@
       </section>
       <section id="sociale-media">
         <ul>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
           <li>
             <a href="https://www.linkedin.com/in/titahelmostafa"
               ><svg
@@ -80,6 +68,19 @@
         </ul>
       </section>
     </main>
+    <footer>
+      <div>
+        <h3>Contact Information</h3>
+        <p>Name : MOSTAFA TITAH</p>
+        <p>Professional Title: TITAH MOSTAFA</p>
+        <p>Adresse : 9 Rue des jardins <br />69600 OULLINS <br />FRANCE</p>
+        <p>Phone : +33 676039463</p>
+        <p>Email : titah.mostafa.pro@gmail.com</p>
+      </div>
+      <div class="copyright">
+        <p>©Copyright 2024.Made by MOSTAFA TITAH</p>
+      </div>
+    </footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         var burgerMenu = document.querySelector(".burger-menu");
