--- a/Projects.html
+++ b/Projects.html
@@ -22,41 +22,46 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
-
-      <div class="content">
-        <!-- Le contenu de votre page va ici -->
-        <h1>Bienvenue sur notre site</h1>
-        <p>C'est une page de démonstration.</p>
-      </div>
     </header>
     <main>
-      <section>
+      <section id="container-project">
         <h1>PROJECTS</h1>
         <p>
           Here you will find some of the personal and clients projects that i
           created with each project containing its own case study
         </p>
-        <article>
-          <ul class="my-project">
-            <li>
-              <img src="" alt="" />
-              <h3>Boulangerie</h3>
-              <p></p>
-            </li>
-            <li>
-              <img src="" alt="" />
-              <h3>Family pictures</h3>
-              <p></p>
-            </li>
-            <li>
-              <img src="" alt="" />
-              <h3></h3>
-              <p></p>
-            </li>
-          </ul>
-        </article>
+        <ul>
+          <li>
+            <img src="./image/Capture d'écran 2023-12-15 224219.png" alt="" />
+            <h3>Boulangerie</h3>
+            <p></p>
+          </li>
+          <li>
+            <img src="./image/Capture d'écran 2023-11-30 150505.png" alt="" />
+            <h3>Family pictures</h3>
+            <p></p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3></h3>
+            <p></p>
+          </li>
+        </ul>
       </section>
     </main>
+    <footer>
+      <div>
+        <h3>Contact Information</h3>
+        <p>Name : MOSTAFA TITAH</p>
+        <p>Professional Title: TITAH MOSTAFA</p>
+        <p>Adresse : 9 Rue des jardins <br />69600 OULLINS <br />FRANCE</p>
+        <p>Phone : +33 676039463</p>
+        <p>Email : titah.mostafa.pro@gmail.com</p>
+      </div>
+      <div class="copyright">
+        <p>©Copyright 2024.Made by MOSTAFA TITAH</p>
+      </div>
+    </footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         var burgerMenu = document.querySelector(".burger-menu");
