--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,6 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
-
-      <div class="content">
-        <!-- Le contenu de votre page va ici -->
-        <h1>Bienvenue sur notre site</h1>
-        <p>C'est une page de démonstration.</p>
-      </div>
     </header>
     <section>
       <form class="https://formspree.io/f/xleqbevp" method="POST">
@@ -66,7 +60,19 @@
         </div>
       </form>
     </section>
-    <footer></footer>
+    <footer>
+      <div>
+        <h3>Contact Information</h3>
+        <p>Name : MOSTAFA TITAH</p>
+        <p>Professional Title: TITAH MOSTAFA</p>
+        <p>Adresse : 9 Rue des jardins <br />69600 OULLINS <br />FRANCE</p>
+        <p>Phone : +33 676039463</p>
+        <p>Email : titah.mostafa.pro@gmail.com</p>
+      </div>
+      <div class="copyright">
+        <p>©Copyright 2024.Made by MOSTAFA TITAH</p>
+      </div>
+    </footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         var burgerMenu = document.querySelector(".burger-menu");
