--- a/Projects.html
+++ b/Projects.html
@@ -33,12 +33,12 @@
         <ul>
           <li>
             <img src="./image/Capture d'écran 2023-12-15 224219.png" alt="" />
-            <h3>Boulangerie</h3>
+            <h2>Boulangerie</h2>
             <p></p>
           </li>
           <li>
             <img src="./image/Capture d'écran 2023-11-30 150505.png" alt="" />
-            <h3>Family pictures</h3>
+            <h2>Family pictures</h2>
             <p></p>
           </li>
           <li>
@@ -51,7 +51,7 @@
     </main>
     <footer>
       <div>
-        <h3>Contact Information</h3>
+        <h1>Contact Information</h1>
         <p>Name : MOSTAFA TITAH</p>
         <p>Professional Title: TITAH MOSTAFA</p>
         <p>Adresse : 9 Rue des jardins <br />69600 OULLINS <br />FRANCE</p>
@@ -59,7 +59,7 @@
         <p>Email : titah.mostafa.pro@gmail.com</p>
       </div>
       <div class="copyright">
-        <p>©Copyright 2024.Made by MOSTAFA TITAH</p>
+        <p>©Copyright 2024.Made by <nobr>MOSTAFA TITAH</nobr></p>
       </div>
     </footer>
     <script>
