--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
         <p>Email : titah.mostafa.pro@gmail.com</p>
       </div>
       <div class="copyright">
-        <p>©Copyright 2024.Made by MOSTAFA TITAH</p>
+        <p>©Copyright 2024.Made by<nobr>MOSTAFA TITAH</nobr></p>
       </div>
     </footer>
     <script>
